--- a/index.html
+++ b/index.html
@@ -49,6 +49,18 @@
           <span class="branding">denmau</span>
         </a>
 
+        <div class="collapse navbar-collapse text-right" id="navbarText">
+          <div class="navbar-nav ml-auto flex-nowrap">
+            <a class="nav-item nav-link active" href="https://www.denmau.me"
+              ><span class="navigation-item">Home</span></a
+            >
+            <a class="nav-item nav-link" href="#aboutMe"><span class="navigation-item">About</span></a>
+            <a class="nav-item nav-link" href="#contactMe"><span class="navigation-item">Contact</span></a>
+          </div>
+        </div>
+
+        <a href="/assets/Dennis Kamau CV.pdf" class="btn btn-outline-success text-nowrap btn-sm" role="button">Get CV</a>
+
         <button
           class="navbar-toggler"
           type="button"
@@ -60,16 +72,6 @@
         >
           <span><img src="/img/iconmonstr-menu-1.png" alt="menu icon" height="20" /></span>
         </button>
-
-        <div class="collapse navbar-collapse text-right" id="navbarText">
-          <div class="navbar-nav ml-auto flex-nowrap">
-            <a class="nav-item nav-link active" href="https://www.denmau.me"
-              ><span class="navigation-item">Home</span></a
-            >
-            <a class="nav-item nav-link" href="#aboutMe"><span class="navigation-item">About</span></a>
-            <a class="nav-item nav-link" href="#contactMe"><span class="navigation-item">Contact</span></a>
-          </div>
-        </div>
       </nav>
       <!-- Navigation Bar End -->
     </header>
