--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           </div>
         </div>
 
-        <a href="/assets/Dennis Kamau CV.pdf" class="btn btn-outline-success text-nowrap btn-sm" role="button">Get CV</a>
+        <a href="/assets/Dennis Kamau CV.pdf" class="btn btn-success text-nowrap btn-sm" role="button">Get CV</a>
 
         <button
           class="navbar-toggler"
