--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       <div class="container main-container">
         <div class="flexed">
           <div class="container">
-            <h3 class="title-text">Hey <span class="line"></span></h3>
+            <h3 class="title-text animate__animated animate__shakeX">Hey <span class="line"></span></h3>
             <br />
             <h2 class="site-title animate__animated animate__bounceInDown">I'M DENNIS KAMAU</h2>
             <br />
