--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <!-- Navigation bar -->
       <nav class="navbar navbar-expand-md justify-content-between animate__animated animate__fadeInUpBig">
         <a href="https://www.denmau.me" class="navbar-brand">
-          <img src="/img/brand_abstract.png" alt="denmau logo" height="60" />
+          <img src="/img/brand_abstract.png" alt="denmau logo" height="40" />
           <span class="branding">denmau</span>
         </a>
 
@@ -77,20 +77,10 @@
     </header>
     <section>
       <div class="container main-container">
-        <div class="flexed">
-          <div class="container">
-            <h3 class="title-text animate__animated animate__shakeX">Hey <span class="line"></span></h3>
-            <br />
-            <h2 class="site-title animate__animated animate__bounceInDown">I'M DENNIS KAMAU</h2>
-            <br />
-            <h4 class="site-slogan animate__animated animate__backInRight">UNDERGRADUATE | SOFTWARE ENGINEER</h4>
-          </div>
-        </div>
-        <div class="tag-line">
-          <p class="animate__animated animate__bounceInDown">Computer Science student and upcoming Software Engineer</p>
-        </div>
+          <h3 class="title-text animate__animated animate__shakeX">Hello👋</h3>
+          <h2 class="site-title animate__animated animate__bounceInDown mt-2">I'M DENNIS KAMAU</h2>
+          <h4 class="site-slogan animate__animated animate__backInRight mt-3">UNDERGRADUATE | SOFTWARE ENGINEER</h4>
       </div>
-      <br />
     </section>
     <!-- About Me Section start -->
     <section id="aboutMe">
@@ -142,15 +132,18 @@
           <div class="col-md-12">
             <h2 class="sub-title">🏫Educational Background</h2>
             <div class="px-5 mt-3">
-              <p>2019 to Present</p>
-              <p><b>South Eastern Kenya University</b></p>
-              <p>Bachelor of Science (Computer Science)</p>
-              <p>Expected Graduation Date: Aug 2024</p>
+              <p>
+              2019 to Present<br/>
+              <b>South Eastern Kenya University</b></br>
+              Bachelor of Science (Computer Science)</br>
+              Expected Graduation Date: Aug 2024</br>
+            </p>
               <hr />
-              <p>2015 to 2018</p>
-              <p><b>RONGAI AGRICULTURAL & TECHNICAL HIGH SCHOOL</b></p>
-              <p>Kenya Certificate of Secondary Education (KCSE)</p>
-              <p>Grade: B (plain)</p>
+              <p>
+              2015 to 2018<br />
+              <b>RONGAI AGRICULTURAL & TECHNICAL HIGH SCHOOL</b><br />
+              Kenya Certificate of Secondary Education (KCSE)<br />
+              Grade: B (plain)</p>
               <hr />
             </div>
           </div>
