--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
     </header>
     <section>
       <div class="container main-container">
-          <h3 class="title-text animate__animated animate__shakeX">Hello👋</h3>
-          <h2 class="site-title animate__animated animate__bounceInDown mt-2">I'M DENNIS KAMAU</h2>
-          <h4 class="site-slogan animate__animated animate__backInRight mt-3">UNDERGRADUATE | SOFTWARE ENGINEER</h4>
+        <h3 class="title-text animate__animated animate__shakeX">Hello👋</h3>
+        <h2 class="site-title animate__animated animate__bounceInDown mt-2">I'M DENNIS KAMAU</h2>
+        <h4 class="site-slogan animate__animated animate__backInRight mt-3">UNDERGRADUATE | SOFTWARE ENGINEER</h4>
       </div>
     </section>
     <!-- About Me Section start -->
@@ -133,17 +133,18 @@
             <h2 class="sub-title">🏫Educational Background</h2>
             <div class="px-5 mt-3">
               <p>
-              2019 to Present<br/>
-              <b>South Eastern Kenya University</b></br>
-              Bachelor of Science (Computer Science)</br>
-              Expected Graduation Date: Aug 2024</br>
-            </p>
+                2019 to Present<br />
+                <b>South Eastern Kenya University</b><br />
+                Bachelor of Science (Computer Science)<br />
+                Expected Graduation Date: Aug 2024<br />
+              </p>
               <hr />
               <p>
-              2015 to 2018<br />
-              <b>RONGAI AGRICULTURAL & TECHNICAL HIGH SCHOOL</b><br />
-              Kenya Certificate of Secondary Education (KCSE)<br />
-              Grade: B (plain)</p>
+                2015 to 2018<br />
+                <b>RONGAI AGRICULTURAL & TECHNICAL HIGH SCHOOL</b><br />
+                Kenya Certificate of Secondary Education (KCSE)<br />
+                Grade: B (plain)
+              </p>
               <hr />
             </div>
           </div>
