--- a/index.html
+++ b/index.html
@@ -161,13 +161,13 @@
           <div class="row">
             <div class="col-md-6 col-sm-12 d-flex">
               <div class="social-media col-sm-12 col-md-6 justify-content-sm-center">
-                <a href="https://www.linkedin.com/in/denmau" target="_blank"
+                <a href="https://www.linkedin.com/in/denmau"
                   ><i class="fa fa-linkedin"></i><span class="px-1"></span>LinkedIn</a
                 >
               </div>
 
               <div class="social-media col-sm-12 col-md-6 justify-content-sm-center">
-                <a href="https://www.twitter.com/denmau6" target="_blank"
+                <a href="https://www.twitter.com/denmau6"
                   ><i class="fa fa-twitter"></i><span class="px-1"></span>Twitter</a
                 >
               </div>
@@ -175,7 +175,7 @@
 
             <div class="col-md-6 col-sm-12 d-flex">
               <div class="social-media col-sm-12 col-md-6 justify-content-sm-center">
-                <a href="https://www.github.com/denmau" target="_blank"
+                <a href="https://www.github.com/denmau"
                   ><i class="fa fa-github"></i><span class="px-1"></span>GitHub</a
                 >
               </div>
@@ -242,7 +242,7 @@
           All rights reserved | Copyright ©2021
           <br />
           Made with ❤ by
-          <a href="https://www.github.com/denmau" target="_blank" rel="noopener">Dennis Kamau</a>
+          <a href="https://www.github.com/denmau">Dennis Kamau</a>
         </p>
       </footer>
     </div>
@@ -277,4 +277,4 @@
     ></script>
     <!-- End Cloudflare Web Analytics -->
   </body>
-</html>
+  </html>
