--- a/index.html
+++ b/index.html
@@ -86,13 +86,27 @@
     <section id="aboutMe">
       <div class="container mt-2">
         <h2 class="sub-title">😊About Me</h2>
-        <p>I am an undergraduate at South Eastern Kenya University, studying Computer Science.</p>
+        <p>I am a second year undergrad at South Eastern Kenya University, studying Computer Science.</p>
         <p>I am very passionate about web Development; Machine Learning & AI in particular.</p>
         <div class="row">
           <div class="col-md-6">
             <h6 class="mt-2">🌱 I’m currently learning ..</h6>
             <ul class="skillset">
-              <li>Android Development with Java</li>
+              <li>
+                Android Development with Java taught by
+                <a href="http://www.emobilis.ac.ke/" target="_blank">eMobilis</a>
+              </li>
+              <ul>
+                <li><a href="https://github.com/denmau/FoodFit">Here's my project</a> for this training</li>
+                <li>so far I have learnt:</li>
+                <ul>
+                  <li>Firebase Authentication</li>
+                  <li>Working with third party libraries</li>
+                  <li>Layout</li>
+                  <li>Database - SQLite</li>
+                  <li>Mobile App Development Life cycle</li>
+                </ul>
+              </ul>
               <li>Data Structures & Algorithms</li>
             </ul>
           </div>
@@ -134,14 +148,16 @@
             <div class="px-5 mt-3">
               <p>
                 2019 to Present<br />
-                <span class="secondary-color"><b>South Eastern Kenya University</b></span><br />
+                <span class="secondary-color"><b>South Eastern Kenya University</b></span
+                ><br />
                 Bachelor of Science (Computer Science)<br />
                 Expected Graduation Date: Aug 2023<br />
               </p>
               <hr />
               <p>
                 2015 to 2018<br />
-                <span class="secondary-color"><b>RONGAI AGRICULTURAL & TECHNICAL HIGH SCHOOL</b></span><br />
+                <span class="secondary-color"><b>RONGAI AGRICULTURAL & TECHNICAL HIGH SCHOOL</b></span
+                ><br />
                 Kenya Certificate of Secondary Education (KCSE)<br />
                 Grade: B (plain)
               </p>
@@ -175,9 +191,7 @@
 
             <div class="col-md-6 col-sm-12 d-flex">
               <div class="social-media col-sm-12 col-md-6 justify-content-sm-center">
-                <a href="https://www.github.com/denmau"
-                  ><i class="fa fa-github"></i><span class="px-1"></span>GitHub</a
-                >
+                <a href="https://www.github.com/denmau"><i class="fa fa-github"></i><span class="px-1"></span>GitHub</a>
               </div>
 
               <div class="social-media col-sm-12 col-md-6 justify-content-sm-center">
@@ -220,7 +234,7 @@
                   name="message"
                   class="form-control"
                   id="inputMessage"
-                  placeholder="Message"
+                  placeholder="Hello"
                 ></textarea>
               </div>
             </div>
@@ -277,4 +291,4 @@
     ></script>
     <!-- End Cloudflare Web Analytics -->
   </body>
-  </html>
+</html>
