update contact form UI

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
               </div>
             </div>
             <div class="d-flex justify-content-center">
-              <button type="submit" class="pageclip-form__submit btn btn-primary text-center" style="width: 68%">
+              <button type="submit" class="pageclip-form__submit btn text-center btn-form-submit" style="">
                 <span>Send Message</span>
               </button>
             </div>
