add Food Fit android project

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <section>
       <div class="container-banner-image">
         <div class="container main-container">
-                                                                  <!-- 
+          <!-- 
                                                                     Escapes:
                                                                       &lt; (<)
                                                                       &gt; (>)
@@ -88,14 +88,15 @@
               <li>Data Structures & Algorithms</li>
               <li>Machine Learning & Artificial Intelligence</li>
             </ul>
-            </ul>
           </div>
           <div class="col-md-6">
             <h6 class="mt-2">🔭Skills</h6>
             <ul class="skillset">
               <li>Java Web Development with Spring Boot and Vaadin</li>
               <li>Android Development with Java</li>
-                Check out <a href="https://github.com/denmau/FoodFit">my android project</a> that encompasses the following:
+              Check out
+              <a href="https://github.com/denmau/FoodFit">my android project</a>
+              that encompasses the following:
               <ul>
                 <li>Firebase Authentication</li>
                 <li>Working with third party libraries</li>
@@ -105,6 +106,56 @@
               <li>Front-End Development: Bootstrap (HTML, CSS)</li>
               <li>Database: SQL</li>
             </ul>
+          </div>
+        </div>
+
+        <!-- Projects -->
+        <div class="container mt-2">
+          <div class="col-md-12">
+            <h2 class="sub-title">Projects 😃 + 💻 + 🧠 = 🏆</h2>
+          </div>
+          <div class="food-fit-images">
+            <div class="container-fluid">
+              <h5 class="secondary-color">Food Fit - Recipes app</h5>
+              <div class="row">
+                <div class="col-md-3 col-sm-6 col-xs-12">
+                  <a>
+                    <img
+                      alt="food fit app screenshot"
+                      src="/img/Food Fit Screenshot 1.png"
+                      class="img-responsive rounded"
+                      height="500px"
+                    />
+                  </a>
+                </div>
+                <div class="col-md-3 col-sm-6 col-xs-12">
+                  <a>
+                    <img
+                      alt="food fit app screenshot"
+                      src="/img/Food Fit Screenshot 2.png"
+                      class="img-responsive rounded"
+                      height="500px"
+                    />
+                  </a>
+                </div>
+                <div class="col-md-3 col-sm-6 col-xs-12">
+                  <a>
+                    <img
+                      alt="food fit app screenshot"
+                      src="/img/Food Fit Screenshot 4.png"
+                      class="img-responsive rounded"
+                      height="500px"
+                    />
+                  </a>
+                </div>
+              </div>
+              <p class="mt-2">
+                This is a personal project that demonstrates understanding of the eMobilis Mobile Development Bootcamp.
+                This intensive bootcamp took 4 hours a day for 20 weekdays, totalling to 80 hours, including a 5 day
+                incubation session.
+                <a href="https://www.github.com/denmau/foodfit">View on <i class="fa fa-github"></i></a>
+              </p>
+            </div>
           </div>
         </div>
 
