improved education event

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dennis Kamau | Software Engineer</title>
+    <title>Dennis Kamau | Android Developer</title>
     <link rel="canonical" href=" { { https://www.denmau.me } }{ { index.html } }" />
     <!-- bootsrap -->
     <link
@@ -71,7 +71,7 @@
                                                                   -->
           <h3 class="title-text animate__animated animate__shakeX">&lt;Hi /&gt;</h3>
           <h2 class="site-title animate__animated animate__bounceInDown mt-2">I'M DENNIS KAMAU</h2>
-          <h4 class="site-slogan animate__animated animate__backInRight mt-3">UNDERGRADUATE | SOFTWARE ENGINEER</h4>
+          <h4 class="site-slogan animate__animated animate__backInRight mt-3">UNDERGRADUATE | ANDROID DEVELOPER</h4>
         </div>
       </div>
     </section>
@@ -186,15 +186,22 @@
             <h2 class="sub-title">🏫Educational Background</h2>
             <div class="px-5 mt-3">
               <p>
+                Feb 11, 2021 to Date<br />
+                <span class="secondary-color"><b>eMobilis Mobile Technology Training Institute</b></span
+                ><br />
+                Full Stack Web Development Bootcamp - (HTML, CSS, JS, PHP) (2 months)<br />
+              </p>
+              <hr />
+              <p>
                 Jan 11, 2021 to Feb 6, 2021<br />
                 <span class="secondary-color"><b>eMobilis Mobile Technology Training Institute</b></span
                 ><br />
-                Android Development Bootcamp (80 hours)<br />
+                Android Development Bootcamp (1 month)<br />
                 Personal Project: <a href="https://github.com/denmau/FoodFit">Food Fit Recipes App</a><br />
               </p>
               <hr />
               <p>
-                Sept 2019 to Present<br />
+                Sept 2019 to Date<br />
                 <span class="secondary-color"><b>South Eastern Kenya University</b></span
                 ><br />
                 Bachelor of Science (Computer Science)<br />
