--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <section id="aboutMe">
       <div class="container mt-2">
         <h2 class="sub-title">😊About Me</h2>
-        <p>I am a second year undergrad at South Eastern Kenya University, studying Computer Science.</p>
+        <p>I am a second year undergraduate at South Eastern Kenya University, studying Computer Science.</p>
         <p>I am very passionate about web Development; Machine Learning & AI in particular.</p>
         <div class="row">
           <div class="col-md-6">
