add TensorFlow certification snippet

--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
       <div class="container mt-2">
         <h2 class="sub-title">😊About Me</h2>
         <p>I am a second year undergraduate at South Eastern Kenya University, studying Computer Science.</p>
-        <p>I am very passionate about web Development; Machine Learning & AI in particular.</p>
+        <p>I am very passionate about web Development; Machine Learning & AI in particular. I am currently on track to getting
+          <a href="https://www.tensorflow.org/certificate" target="_blank">TensorFlow Certified!</a></p>
         <div class="row">
           <div class="col-md-6">
             <h6 class="mt-2">🌱 I’m currently learning ..</h6>
