--- a/index.html
+++ b/index.html
@@ -190,14 +190,14 @@
                 Feb 11, 2021 to Date<br />
                 <span class="secondary-color"><b>eMobilis Mobile Technology Training Institute</b></span
                 ><br />
-                Full Stack Web Development Bootcamp - (HTML, CSS, JS, PHP) (2 months)<br />
+                Full Stack Web Development Bootcamp - (HTML, CSS, JS, PHP) (4 hrs/day)<br />
               </p>
               <hr />
               <p>
                 Jan 11, 2021 to Feb 6, 2021<br />
                 <span class="secondary-color"><b>eMobilis Mobile Technology Training Institute</b></span
                 ><br />
-                Android Development Bootcamp (1 month)<br />
+                Android Development Bootcamp (4 hrs/day)<br />
                 Personal Project: <a href="https://github.com/denmau/FoodFit">Food Fit Recipes App</a><br />
               </p>
               <hr />
