--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dennis Kamau | Android Developer</title>
     
-    // Canonical Link
+    <!-- Canonical Link -->
     <link rel="canonical" href=" { { https://www.denmau.me } }{ { index.html } }" />
 
     <!-- bootsrap -->
