temporarily removed CV from website so that I can work on it

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           </div>
         </div>
 
-        <a href="/assets/Dennis Kamau CV.pdf" class="btn btn-get-CV text-nowrap btn-sm" role="button">Get CV</a>
+        <a href="#" class="btn btn-get-CV text-nowrap btn-sm" role="button">Get CV</a>
 
         <button
           class="navbar-toggler"
