--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
               </div>
             </div>
             <div class="d-flex justify-content-center">
-              <button type="submit" class="pageclip-form__submit btn text-center btn-form-submit" style="">
+              <button type="submit" class="pageclip-form__submit btn text-center btn-form-submit">
                 <span>Send Message</span>
               </button>
             </div>
