--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           </div>
         </div>
 
-        <a href="#" class="btn btn-get-CV text-nowrap btn-sm" role="button">Get CV</a>
+        <a href="#" class="btn btn-get-CV text-nowrap btn-sm" role="button" onclick="alertCVNotAvailable()">Get CV</a>
 
         <button
           class="navbar-toggler"
