remove unnecessary images

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <!-- Font Awesome  -->
     <script src="https://use.fontawesome.com/fa8887939e.js"></script>
-    <!-- Page Clip Form Submission -->
+    <!-- Page Clip -->
     <link rel="stylesheet" href="https://s.pageclip.co/v1/pageclip.css" media="screen" />
     <!-- Main stylesheet -->
     <link rel="stylesheet" href="/css/index.css" />
@@ -68,7 +68,7 @@
       <div class="container-banner-image">
         <div class="container main-container">
           <!-- 
-                                                                    Escapes:
+                                                                    HTML escape Characters:
                                                                       &lt; (<)
                                                                       &gt; (>)
                                                                   -->
