update twitter username

--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
               <div
                 class="social-media col-sm-12 col-md-6 justify-content-sm-center"
               >
-                <a href="https://www.twitter.com/denmau6"
+                <a href="https://www.twitter.com/devdenmau"
                   ><i class="fa fa-twitter"></i
                   ><span class="px-1"></span>Twitter</a
                 >
