add styling framework

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <!--    />-->
 
     <!-- Main stylesheet -->
-    <link rel="stylesheet" href="/css/index.css"/>
+    <link rel="stylesheet" href="/css/style.css"/>
     <title>Dennis Kamau | Full Stack ML Engineer</title>
 
     <!-- Restrict protocol to https-->
